--- a/vagrant/chef/cookbooks/my_cookbook/files/default/app.conf
+++ b/vagrant/chef/cookbooks/my_cookbook/files/default/app.conf
@@ -1,15 +1,63 @@
 <VirtualHost *:80>
-  ServerName app
-  DocumentRoot /home/vagrant/app
+  ServerName dev.local
+  DocumentRoot /srv/host_share
 
   <IfModule mpm_itk_module>
     AssignUserId vagrant vagrant
   </IfModule>
 
-  <Directory /home/vagrant/app>
+  <Directory /srv/host_share>
     Order allow,deny
     Allow from all
     AllowOverride all
   </Directory>
 </VirtualHost>
 
+<VirtualHost *:80>
+  ServerName imat.dev.local
+  DocumentRoot /srv/host_share/Sites/imat/public
+
+  SetEnv APPLICATION_ENV development
+
+  <IfModule mpm_itk_module>
+    AssignUserId vagrant vagrant
+  </IfModule>
+
+  <Directory /srv/host_share/Sites/imat/public>
+    Order allow,deny
+    Allow from all
+    AllowOverride all
+  </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+  ServerName wordpress.dev.local
+  DocumentRoot /srv/host_share/Resources/wordpress
+
+  <IfModule mpm_itk_module>
+    AssignUserId vagrant vagrant
+  </IfModule>
+
+  <Directory /srv/host_share/Resources/wordpress>
+    Order allow,deny
+    Allow from all
+    AllowOverride all
+  </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
+  ServerName zendskeleton.dev.local
+  DocumentRoot /srv/host_share/Sites/zendskeleton/public
+
+  SetEnv APPLICATION_ENV development
+  
+  <IfModule mpm_itk_module>
+    AssignUserId vagrant vagrant
+  </IfModule>
+
+  <Directory /srv/host_share/Sites/zendskeleton/public>
+    Order allow,deny
+    Allow from all
+    AllowOverride all
+  </Directory>
+</VirtualHost>
