Setup a new host alias so oauth stuff can be developed.

--- a/vagrant/chef/cookbooks/my_cookbook/files/default/app.conf
+++ b/vagrant/chef/cookbooks/my_cookbook/files/default/app.conf
@@ -47,6 +47,8 @@
 
 <VirtualHost *:80>
   ServerName zendskeleton.dev.local
+  ServerAlias zendskeleton.dev.nottingham.ac.uk
+  
   DocumentRoot /srv/host_share/Sites/zendskeleton/public
 
   SetEnv APPLICATION_ENV development
