--- a/vagrant/chef/cookbooks/my_cookbook/files/default/app.conf
+++ b/vagrant/chef/cookbooks/my_cookbook/files/default/app.conf
@@ -14,6 +14,25 @@
 </VirtualHost>
 
 <VirtualHost *:80>
+  ServerName bestbetsv2.dev.local
+  ServerAlias bestbetsv2.dev.nottingham.ac.uk
+  
+  DocumentRoot /srv/host_share/Sites/bestbetsv2/public
+
+  SetEnv APPLICATION_ENV development
+  
+  <IfModule mpm_itk_module>
+    AssignUserId vagrant vagrant
+  </IfModule>
+
+  <Directory /srv/host_share/Sites/bestbetsv2/public>
+    Order allow,deny
+    Allow from all
+    AllowOverride all
+  </Directory>
+</VirtualHost>
+
+<VirtualHost *:80>
   ServerName imat.dev.local
   DocumentRoot /srv/host_share/Sites/imat/public
 
